--- a/src/app/shared/highlight/highlight.component.html
+++ b/src/app/shared/highlight/highlight.component.html
@@ -1,5 +1,5 @@
-<section highlight-js-content="code.highlight" layout-fill>
-  <pre class="no-margin snippet" layout-fill>
+<section highlight-js-content="code.highlight" fxFill>
+  <pre class="no-margin snippet" fxFill>
     <button id="copy-btn" class="copy-btn" data-clipboard-target="#code">
       <img class="clippy" width="13" src="./assets/images/clippy.svg" alt="Copy to clipboard">
     </button>
