--- a/src/assets/css/app.scss
+++ b/src/assets/css/app.scss
@@ -1,10 +1,15 @@
+// @import 'node_modules/ontimize-web-ng2/ontimize/components/theming/indigo-pink.scss';
+// @import 'node_modules/ontimize-web-ng2/ontimize/components/theming/deeppurple-amber.scss';
+// @import 'node_modules/ontimize-web-ng2/ontimize/components/theming/pink-bluegrey.scss';
+// @import 'node_modules/ontimize-web-ng2/ontimize/components/theming/purple-green.scss';
+
 
 @import 'my-custom-app-theme.scss';
 
 @import 'node_modules/ontimize-web-ng2/ontimize/components/theming/all-theme.scss';
 @include o-material-theme($theme);
 
-@import '../../app/+main/main-theme.scss';
+@import '../../app/main/main-theme.scss';
 @include main-theme($theme);
 
 .container-title {
