--- a/src/components/chart/o-chart.component.html
+++ b/src/components/chart/o-chart.component.html
@@ -1,4 +1,3 @@
-<div layout="row" layout-padding layout-align="center center">
-    <nvd3 #nvChart layout-fill [options]="options" [data]="dataArray"></nvd3>
+<div fxLayout="row" layout-padding fxLayoutAlign="center center">
+    <nvd3 #nvChart fxFlexFill [options]="options" [data]="getDataArray()"></nvd3>
 </div>
-
