--- a/src/app/main/discrete-bar/discrete-bar.component.html
+++ b/src/app/main/discrete-bar/discrete-bar.component.html
@@ -16,7 +16,7 @@
     <example-comp [comp-name]="getInsideFormId()" [files]="getInsideFormFiles()" layout-fill>
         <div layout="row" layout-padding layout-align="center center">
             <o-form layout="column" show-header="yes" header-mode="none" label-header="Account detail" header-actions="R" entity="EAccounts"
-                keys="ACCOUNTID" #oForm flex="75" class="md-whiteframe-4dp">
+                keys="ACCOUNTID" #oForm flex="75" class="mat-elevation-z4">
                 <o-row elevation="0" layout-align="space-between center">
                     <o-integer-input attr="ACCOUNTID" enabled="no" layout-padding></o-integer-input>
                     <o-row elevation="2" layout="row">
