--- a/src/app/main/main-theme.scss
+++ b/src/app/main/main-theme.scss
@@ -8,7 +8,7 @@
   $foreground: map-get($theme, foreground);
 
   .main-sidenav {
-    md-sidenav {
+    mat-sidenav {
       background-color: mat-color($primary);
       color: mat-color($primary, default-contrast);
     }
