--- a/src/app/main/home/home.component.html
+++ b/src/app/main/home/home.component.html
@@ -19,14 +19,14 @@
     <div layout="row" layout-align="center">
       <a class="changelog" href="https://github.com/OntimizeWeb/ontimize-web-ngx-charts/blob/master/CHANGELOG.md" target="_blank">
         <div layout-padding layout="row" layout-align="center">
-          <md-icon class="md-48">access_time</md-icon>
+          <mat-icon class="mat-48">access_time</mat-icon>
           <span>CHANGELOG</span>
         </div>
       </a>
     </div>
   </div>
 
-  <md-divider></md-divider>
+  <mat-divider></mat-divider>
 
   <div layout-padding>
     <h2>Related topics</h2>
@@ -36,7 +36,7 @@
 
     <div layout="row" layout-align="start center">
       <h5>nvD3</h5>
-      <a href="http://nvd3.org/index.html" target="_blank"> <md-icon>launch</md-icon></a>
+      <a href="http://nvd3.org/index.html" target="_blank"> <mat-icon>launch</mat-icon></a>
     </div>
     <p class="body-text">
       NVD3 project is an attempt to build re-usable charts and chart components for d3.js without taking away the power that d3.js gives you.
@@ -45,7 +45,7 @@
 
     <div layout="row" layout-align="start center">
       <h5>nvD3 documentation</h5>
-      <a href="http://nvd3-community.github.io/nvd3/examples/documentation.html#" target="_blank"> <md-icon>launch</md-icon></a>
+      <a href="http://nvd3-community.github.io/nvd3/examples/documentation.html#" target="_blank"> <mat-icon>launch</mat-icon></a>
     </div>
     <p class="body-text">
       Check out all options available to configure the charts.
@@ -53,7 +53,7 @@
 
     <div layout="row" layout-align="start center">
       <h5>D3-3.x api reference</h5>
-      <a href="https://github.com/d3/d3-3.x-api-reference/blob/master/API-Reference.md" target="_blank"> <md-icon>launch</md-icon></a>
+      <a href="https://github.com/d3/d3-3.x-api-reference/blob/master/API-Reference.md" target="_blank"> <mat-icon>launch</mat-icon></a>
     </div>
     <p class="body-text">
       D3 (Data-Driven Documents or D3.js) is a JavaScript library for visualizing data using web standards. D3 helps you bring data to life using SVG, Canvas and HTML.
