--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -14,18 +14,18 @@
 </o-app-layout>
 
 <!--
-<md-sidenav-layout layout-fill>
-  <md-sidenav mode="side" opened="true" class="main-sidenav">
+<mat-sidenav-layout layout-fill>
+  <mat-sidenav mode="side" opened="true" class="main-sidenav">
     <side-menu></side-menu>
-  </md-sidenav>
+  </mat-sidenav>
 
 
-  <md-toolbar class="navigation-toolbar">
+  <mat-toolbar class="navigation-toolbar">
     {{ sectionTitle }}
     <span flex></span>
     <a href="https://github.com/OntimizeWeb/ontimize-web-ngx-charts/tree/master" title="View Source on Github" aria-label="View Source on Github"
       target="_blank">
-      <md-icon role="img" svgsrc="./assets/images/github.svg" class="md2 mat-icon" ng-reflect-svg-src="./assets/images/github.svg">
+      <mat-icon role="img" svgsrc="./assets/images/github.svg" class="md2 mat-icon" ng-reflect-svg-src="./assets/images/github.svg">
         <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" viewBox="8 11 33 28" fit=""
           height="100%" width="100%" preserveAspectRatio="xMidYMid meet" focusable="false">
           <path fill="#333" d="M11.828,18.179c0,0-3.344,3.499-2.763,9.192 c0.581,5.694,4.186,10.392,16.208,10.392c12.021,0,15.045-6.275,15.116-11.436c0.071-5.159-2.253-7.46-3.344-8.243 c0,0,0.007-3.704-0.343-5.661c0,0-1.85-0.219-5.845,2.07c0,0-5.454-0.533-12.722,0.065c0,0-3.053-2.04-6.129-2.574 C12.006,11.984,11.496,15.196,11.828,18.179z"></path>
@@ -44,12 +44,12 @@
           </g>
           <path fill="#9C584F" d="M24.076,32.705c0,0,0.499-1.418,1.109-0.089 c0,0-0.457,0.297-0.285,0.996l1.428,0.546h-3.23l1.28-0.575C24.378,33.583,24.562,32.527,24.076,32.705z"></path>
         </svg>
-      </md-icon>
+      </mat-icon>
     </a>
     <span class="version">{{ version }}</span>
-  </md-toolbar>
+  </mat-toolbar>
   <div class="main-container">
     <router-outlet></router-outlet>
   </div>
 
-</md-sidenav-layout> -->
+</mat-sidenav-layout> -->
