--- a/src/app/main/main.component.scss
+++ b/src/app/main/main.component.scss
@@ -11,9 +11,9 @@
   box-shadow: 0 2px 4px -1px rgba(0,0,0,.2),0 4px 5px 0 rgba(0,0,0,.14),0 1px 10px 0 rgba(0,0,0,.12);
 }
 
-md-sidenav {
+mat-sidenav {
   width: 250px;
-  .md-sidenav-content{
+  .mat-sidenav-content{
     overflow: hidden;
   }
 
