--- a/src/app/shared/example/example.component.html
+++ b/src/app/shared/example/example.component.html
@@ -2,38 +2,38 @@
 
   <div fxLayout="column" layout-padding fxFill>
     <section fxLayout="column" class="playground-container mat-elevation-z4" [class.show-source]="showSource">
-      <md-toolbar class="playground-toolbar" color="primary">
+      <mat-toolbar class="playground-toolbar" color="primary">
         <span> {{ compName }}</span>
         <span fxFlex></span>
 
-        <button *ngIf="!collapsed && orderedFiles && orderedFiles.length" md-icon-button aria-label="View Source" (click)="toggleShowSource()">
-          <md-icon class="mat-24">code</md-icon>
+        <button *ngIf="!collapsed && orderedFiles && orderedFiles.length" mat-icon-button aria-label="View Source" (click)="toggleShowSource()">
+          <mat-icon class="mat-24">code</mat-icon>
         </button>
 
-        <button *ngIf="collapsible" md-icon-button aria-label="Collapse" (click)="collapsed = !collapsed">
-          <md-icon *ngIf="!collapsed" class="mat-24">keyboard_arrow_up</md-icon>
-          <md-icon *ngIf="collapsed" class="mat-24">keyboard_arrow_down</md-icon>
+        <button *ngIf="collapsible" mat-icon-button aria-label="Collapse" (click)="collapsed = !collapsed">
+          <mat-icon *ngIf="!collapsed" class="mat-24">keyboard_arrow_up</mat-icon>
+          <mat-icon *ngIf="collapsed" class="mat-24">keyboard_arrow_down</mat-icon>
         </button>
 
-      </md-toolbar>
+      </mat-toolbar>
 
       <!-- Source views -->
-      <md-tab-group *ngIf="showSource">
-        <!--<md-tab *ngFor="let file of orderedFiles" label="{{ file?.type | oTranslate }}">
+      <mat-tab-group *ngIf="showSource">
+        <!--<mat-tab *ngFor="let file of orderedFiles" label="{{ file?.type | oTranslate }}">
               <div class="playground-source-container">
                 <highlight-comp [template-content]="file.data" [template-type]="file.type" ></highlight-comp>
               </div>
-          </md-tab>-->
-        <md-tab label="{{ 'html' | uppercase }}" *ngIf="hasTplData('html')">
+          </mat-tab>-->
+        <mat-tab label="{{ 'html' | uppercase }}" *ngIf="hasTplData('html')">
           <highlight-comp [template-content]="html ? html : getTplData('html')" [template-type]="html"></highlight-comp>
-        </md-tab>
-        <md-tab label="{{ 'scss' | uppercase }}" *ngIf="hasTplData('scss')">
+        </mat-tab>
+        <mat-tab label="{{ 'scss' | uppercase }}" *ngIf="hasTplData('scss')">
           <highlight-comp [template-content]="getTplData('scss')" [template-type]="scss"></highlight-comp>
-        </md-tab>
-        <md-tab label="{{ 'typescript' | uppercase }}" *ngIf="hasTplData('typescript')">
+        </mat-tab>
+        <mat-tab label="{{ 'typescript' | uppercase }}" *ngIf="hasTplData('typescript')">
           <highlight-comp [template-content]="getTplData('typescript')" [template-type]="typescript"></highlight-comp>
-        </md-tab>
-      </md-tab-group>
+        </mat-tab>
+      </mat-tab-group>
 
       <!-- Live Demos -->
       <div fxFlex="grow" [class.collapsed]="collapsed" [class.collapsible]="collapsible">
