--- a/src/components/chart/o-chart.component.html
+++ b/src/components/chart/o-chart.component.html
@@ -1,3 +1,3 @@
 <div fxLayout="row" layout-padding fxLayoutAlign="center center">
-    <nvd3 #nvChart fxFlexFill [options]="options" [data]="getDataArray()" config="{extended: true}"></nvd3>
+    <nvd3 #nvChart fxFlexFill [options]="options" [data]="getDataArray()" config="{visible: true, extended: true}"></nvd3>
 </div>
