--- a/src/app/main/multi-bar-horizontal/multi-bar-horizontal.component.html
+++ b/src/app/main/multi-bar-horizontal/multi-bar-horizontal.component.html
@@ -2,9 +2,9 @@
 
     <example-comp [comp-name]="getBasicUsageId()" [files]="getBasicUsageFiles()" layout-fill>
         <div layout="row" layout-padding layout-align="center center">
-            <o-chart #multiBarHor type="multiBarHorizontal" x-label="Time" y-label="Amount (€)" flex="75"
+            <o-chart #multiBarHor type="multiBarHorizontalChart" chart-height="600" x-label="Time" y-label="Amount (€)" flex="75"
                 entity="EMovementsGrouped" x-axis="DATE_" y-axis="MOVEMENT;AVERAGE;BALANCE"
-                x-data-type="time"></o-chart>
+                x-data-type="time" [chart-parameters]="chartParameters" ></o-chart>
         </div>
         <div class="body-text-container" layout-padding>
             <h2>Basic Usage</h2>
