--- a/src/app/main/pie/pie.component.html
+++ b/src/app/main/pie/pie.component.html
@@ -2,8 +2,7 @@
 
     <example-comp [comp-name]="getBasicUsageId()" [files]="getBasicUsageFiles()" layout-fill>
         <div layout="row" layout-padding layout-align="center center">
-            <o-chart type="pie" flex="75" entity="EMovementTypesTotal"
-                x-axis="MOVEMENTTYPES" y-axis="MOVEMENT"></o-chart>
+            <o-chart type="pie" flex="75" entity="EMovementTypesTotal" x-axis="MOVEMENTTYPES" y-axis="MOVEMENT"></o-chart>
         </div>
         <div class="body-text-container" layout-padding>
             <h2>Basic Usage</h2>
@@ -11,6 +10,15 @@
                 Chart data are provided through an Ontimize service.
             </p>
         </div>
+    </example-comp>
+
+    <example-comp [comp-name]="getCustomConfigurationId()" [files]="getCustomConfigurationFiles()" layout-fill>
+        <div layout="row" layout-padding layout-align="center center">
+            <o-chart type="pie" flex="75" entity="EMovementTypesTotal" x-axis="MOVEMENTTYPES" y-axis="MOVEMENT"
+            [chart-parameters]="chartParameters">
+            </o-chart>
+        </div>
+
     </example-comp>
 
     <example-comp [comp-name]="getCustomDataId()" [files]="getCustomDataFiles()" layout-fill>
