Updating demo using new chart types

--- a/src/app/main/line/line.component.html
+++ b/src/app/main/line/line.component.html
@@ -30,7 +30,7 @@
         <div layout="row" layout-fill layout-align="center">
             <o-chart #lineChart type="line" x-label="Time" y-label="Amount (€)" flex="75"
                 entity="EMovementsGrouped" x-axis="DATE_" y-axis="MOVEMENT;AVERAGE;BALANCE"
-                x-data-type="time" ></o-chart>
+                x-data-type="time" [chart-parameters]="chartParametersSerie"></o-chart>
         </div>
         <div class="body-text-container" layout-padding>
             <h2>Series </h2>
