--- a/src/app/main/candlestick/candlestick.component.html
+++ b/src/app/main/candlestick/candlestick.component.html
@@ -1,7 +1,7 @@
 <div layout="column" layout-align="center top" layout-margin>
   <example-comp [comp-name]="getBasicUsageId()" [files]="getBasicUsageFiles()">
     <div layout="row" layout-padding layout-align="center center">
-      <o-chart #ohlc type="candlestickBarChart" chart-height="600" x-data-type="time"
+      <o-chart type="candlestickBarChart" chart-height="600" x-data-type="time"
         [chart-parameters]="chartParameters" entity="EMovementsGrouped"></o-chart>
       <div class="body-text-container" layout-padding>
         <h2>Basic Usage</h2>
@@ -14,7 +14,7 @@
 
   <example-comp [comp-name]="getCustomServiceId()" [files]="getCustomServiceFiles()">
     <div layout="row" layout-padding layout-align="center center">
-      <o-chart type="candlestickBarChart" chart-height="600" x-data-type="time"
+      <o-chart #candlestick type="candlestickBarChart" chart-height="600" x-data-type="time"
         [chart-parameters]="chartParameters2"></o-chart>
     </div>
     <div class="body-text-container" layout-padding>
