--- a/src/app/main/ohlc/ohlc.component.html
+++ b/src/app/main/ohlc/ohlc.component.html
@@ -2,7 +2,7 @@
   <example-comp [comp-name]="getBasicUsageId()" [files]="getBasicUsageFiles()">
     <div layout="row" layout-padding layout-align="center center">
       <o-chart #ohlc type="ohlcBarChart" chart-height="600" x-data-type="time"
-        [chart-parameters]="chartParameters" entity="EMovementsGrouped"></o-chart>
+        [chart-parameters]="chartParameters" entity="EStockExchange"></o-chart>
       <div class="body-text-container" layout-padding>
         <h2>Basic Usage</h2>
         <p class="body-text">
