--- a/src/app/main/bubble/bubble.component.html
+++ b/src/app/main/bubble/bubble.component.html
@@ -4,9 +4,10 @@
     <o-chart #bubbleChart type="bubbleChart" flex="75" chart-height="400"></o-chart>
   </div>
   <div class="body-text-container" layout-padding>
-    <h2>Basic Usage</h2>
+    <h2>Custom Usage</h2>
     <p class="body-text">
-      Chart data are provided through an Ontimize service.
+        Chart data are provided through an independent own service. In this case de data
+        are hard coded in the typescript
     </p>
   </div>
 </example-comp>
