--- a/src/app/main/donut/donut.component.html
+++ b/src/app/main/donut/donut.component.html
@@ -1,25 +1,22 @@
-<div layout="column" layout-align="center top" layout-margin>
+<div fxLayout="column" fxLayoutAlign="center top">
   <example-comp [comp-name]="getBasicUsageId()" [files]="getBasicUsageFiles()">
-    <div layout="row" layout-padding layout-align="center center">
-      <o-chart type="donutChart" flex="75" entity="EMovementTypesTotal" x-axis="MOVEMENTTYPES" y-axis="MOVEMENT"
-        chart-height="400"></o-chart>
-    </div>
-    <div class="body-text-container" layout-padding>
+    <o-chart type="donutChart" flex="75" entity="EMovementTypesTotal" x-axis="MOVEMENTTYPES" y-axis="MOVEMENT"
+      chart-height="400"></o-chart>
+    <div class="body-text-container">
       <h2>Basic Usage</h2>
       <p class="body-text">
         Chart data are provided through an Ontimize service.
       </p>
     </div>
   </example-comp>
+
   <example-comp [comp-name]="getCustomConfigurationId()" [files]="getCustomConfigurationFiles()">
-    <div layout="row" layout-padding layout-align="center center">
-      <o-chart #donutConfig type="donutChart" chart-height="400" flex="75" entity="EMovementTypesTotal" x-axis="MOVEMENTTYPES"
-        y-axis="MOVEMENT" [chart-parameters]="chartParameters"></o-chart>
-    </div>
-    <div class="body-text-container" layout-padding>
+    <o-chart #donutConfig type="donutChart" chart-height="400" entity="EMovementTypesTotal" x-axis="MOVEMENTTYPES"
+      y-axis="MOVEMENT" [chart-parameters]="chartParameters"></o-chart>
+    <div class="body-text-container">
       <h2>Custom Configuration</h2>
       <p class="body-text">
-        Chart configuration are provided for the user in component
+        Chart configuration are provided for the user in component.
       </p>
     </div>
   </example-comp>
