--- a/src/app/main/main.component.html
+++ b/src/app/main/main.component.html
@@ -14,7 +14,7 @@
 </o-app-layout>
 
 <!--
-<mat-sidenav-layout layout-fill>
+<mat-sidenav-layout>
   <mat-sidenav mode="side" opened="true" class="main-sidenav">
     <side-menu></side-menu>
   </mat-sidenav>
