--- a/src/app/main/bubble/bubble.component.html
+++ b/src/app/main/bubble/bubble.component.html
@@ -1,14 +1,12 @@
-<div layout="column" layout-align="center top" layout-margin>
-<example-comp [comp-name]="getId()" [files]="getFiles()">
-  <div layout="row" layout-padding layout-align="center center">
-    <o-chart #bubbleChart type="bubbleChart" flex="75" chart-height="400"></o-chart>
-  </div>
-  <div class="body-text-container" layout-padding>
-    <h2>Custom Usage</h2>
-    <p class="body-text">
-        Chart data are provided through an independent own service. In this case de data
-        are hard coded in the typescript
-    </p>
-  </div>
-</example-comp>
+<div fxLayout="column" fxLayoutAlign="center top">
+  <example-comp [comp-name]="getId()" [files]="getFiles()">
+    <o-chart #bubbleChart type="bubbleChart" chart-height="400"></o-chart>
+    <div class="body-text-container">
+      <h2>Custom Usage</h2>
+      <p class="body-text">
+        Chart data are provided through an independent own service. In this case de data are hard coded in the
+        typescript
+      </p>
+    </div>
+  </example-comp>
 </div>
