--- a/src/app/main/directed-graph/directed-graph.component.html
+++ b/src/app/main/directed-graph/directed-graph.component.html
@@ -1,11 +1,7 @@
-<div layout="column" layout-align="center top" layout-margin>
+<div fxLayout="column" fxLayoutAlign="center top">
   <example-comp [comp-name]="getBasicUsageId()" [files]="getBasicUsageFiles()">
-    <div layout="row" layout-padding layout-align="center center">
-      <o-chart #directedGraph type="forceDirectedGraph" chart-height="450" chart-width="1000"
-       [chart-parameters]="chartParameters" flex="75">
-      </o-chart>
-    </div>
-    <div class="body-text-container" layout-padding>
+    <o-chart #directedGraph type="forceDirectedGraph" chart-height="450" chart-width="1000" [chart-parameters]="chartParameters"></o-chart>
+    <div class="body-text-container">
       <h2>Custom data</h2>
       <p class="body-text">
         Data provided by the user
