--- a/src/app/main/gauge/gauge-space/gauge-space.component.html
+++ b/src/app/main/gauge/gauge-space/gauge-space.component.html
@@ -1,10 +1,7 @@
-<div layout="column" layout-align="center top" layout-margin>
-<o-row fxFlex>
+<div fxLayout="row" fxLayoutAlign="center stretch">
   <example-comp fxFlex="50" [comp-name]="getBasicId()" [files]="getBasicFiles()">
-    <div layout="row" layout-padding layout-align="center center">
-      <o-chart type="gaugeSpaceChart" flex="75" chart-height="350" entity="EDataGauge" [chart-parameters]="gaugeSpaceConf"></o-chart>
-    </div>
-    <div class="body-text-container" layout-padding>
+    <o-chart type="gaugeSpaceChart" chart-height="350" entity="EDataGauge" [chart-parameters]="gaugeSpaceConf"></o-chart>
+    <div class="body-text-container">
       <h2>Basic Usage</h2>
       <p class="body-text">
         Chart data are provided through an Ontimize service.
@@ -12,16 +9,13 @@
     </div>
   </example-comp>
   <example-comp fxFlex [comp-name]="getCustomId()" [files]="getCustomFiles()">
-    <div layout="row" layout-padding layout-align="center center">
-      <o-chart #gaugeSpace type="gaugeSpaceChart" flex="75" chart-height="350" [chart-parameters]="gaugeSpaceConf2"></o-chart>
-    </div>
-    <div class="body-text-container" layout-padding>
+    <o-chart #gaugeSpace type="gaugeSpaceChart" chart-height="350" [chart-parameters]="gaugeSpaceConf2"></o-chart>
+    <div class="body-text-container">
       <h2>Custom Usage</h2>
       <p class="body-text">
-        Chart data are provided through an independent own service. In this case de data
-        are hard coded in the typescript
+        Chart data are provided through an independent own service. In this case de data are hard coded in the
+        typescript.
       </p>
     </div>
   </example-comp>
-</o-row>
 </div>
