--- a/src/app/main/home/home.component.html
+++ b/src/app/main/home/home.component.html
@@ -1,5 +1,3 @@
-
-
 <div layout-padding flex="80">
   <div layout-padding>
     <h2>What is Ontimize Web Charts?</h2>
@@ -16,9 +14,10 @@
     <p class="body-text" style="margin-bottom:0px;">
       Please refer to our changelog for up-to-date listings of all improvements and breaking changes.
     </p>
-    <div layout="row" layout-align="center">
-      <a class="changelog" href="https://github.com/OntimizeWeb/ontimize-web-ngx-charts/blob/master/CHANGELOG.md" target="_blank">
-        <div layout-padding layout="row" layout-align="center">
+    <div fxLayout="row">
+      <a class="changelog" href="https://github.com/OntimizeWeb/ontimize-web-ngx-charts/blob/master/CHANGELOG.md"
+        target="_blank">
+        <div fxLayout="row" fxLayoutAlign="start" layout-padding>
           <mat-icon class="mat-48">access_time</mat-icon>
           <span>CHANGELOG</span>
         </div>
@@ -34,30 +33,40 @@
       Here are some interesting reading topics that can help you better understand how to develop with Ontimize Web.
     </p>
 
-    <div layout="row" layout-align="start center">
+    <div fxLayout="row" fxLayoutAlign="start center">
       <h5>nvD3</h5>
-      <a href="http://nvd3.org/index.html" target="_blank"> <mat-icon>launch</mat-icon></a>
+      <a href="http://nvd3.org/index.html" target="_blank">
+        <mat-icon>launch</mat-icon>
+      </a>
     </div>
     <p class="body-text">
-      NVD3 project is an attempt to build re-usable charts and chart components for d3.js without taking away the power that d3.js gives you.
-      This is collection of components, with the goal of keeping these components very customizable, staying away from your standard cookie cutter solutions.
+      NVD3 project is an attempt to build re-usable charts and chart components for d3.js without taking away the power
+      that d3.js gives you.
+      This is collection of components, with the goal of keeping these components very customizable, staying away from
+      your standard cookie cutter solutions.
     </p>
 
-    <div layout="row" layout-align="start center">
+    <div fxLayout="row" fxLayoutAlign="start center">
       <h5>nvD3 documentation</h5>
-      <a href="http://nvd3-community.github.io/nvd3/examples/documentation.html#" target="_blank"> <mat-icon>launch</mat-icon></a>
+      <a href="http://nvd3-community.github.io/nvd3/examples/documentation.html#" target="_blank">
+        <mat-icon>launch</mat-icon>
+      </a>
     </div>
     <p class="body-text">
       Check out all options available to configure the charts.
     </p>
 
-    <div layout="row" layout-align="start center">
+    <div fxLayout="row" fxLayoutAlign="start center">
       <h5>D3-3.x api reference</h5>
-      <a href="https://github.com/d3/d3-3.x-api-reference/blob/master/API-Reference.md" target="_blank"> <mat-icon>launch</mat-icon></a>
+      <a href="https://github.com/d3/d3-3.x-api-reference/blob/master/API-Reference.md" target="_blank">
+        <mat-icon>launch</mat-icon>
+      </a>
     </div>
     <p class="body-text">
-      D3 (Data-Driven Documents or D3.js) is a JavaScript library for visualizing data using web standards. D3 helps you bring data to life using SVG, Canvas and HTML.
-      D3 combines powerful visualization and interaction techniques with a data-driven approach to DOM manipulation, giving you the full capabilities of modern browsers
+      D3 (Data-Driven Documents or D3.js) is a JavaScript library for visualizing data using web standards. D3 helps
+      you bring data to life using SVG, Canvas and HTML.
+      D3 combines powerful visualization and interaction techniques with a data-driven approach to DOM manipulation,
+      giving you the full capabilities of modern browsers
       and the freedom to design the right visual interface for your data.
     </p>
 
