--- a/src/app/main/ohlc/ohlc.component.html
+++ b/src/app/main/ohlc/ohlc.component.html
@@ -1,27 +1,22 @@
-<div layout="column" layout-align="center top" layout-margin>
+<div fxLayout="column" fxLayoutAlign="center top">
   <example-comp [comp-name]="getBasicUsageId()" [files]="getBasicUsageFiles()">
-    <div layout="row" layout-padding layout-align="center center">
-      <o-chart #ohlc type="ohlcBarChart" chart-height="600" x-data-type="time"
-        [chart-parameters]="chartParameters" entity="EStockExchange"></o-chart>
-      <div class="body-text-container" layout-padding>
-        <h2>Basic Usage</h2>
-        <p class="body-text">
-          Chart data are provided through an Ontimize service
-        </p>
-      </div>
+    <o-chart #ohlc type="ohlcBarChart" chart-height="600" x-data-type="time" [chart-parameters]="chartParameters"
+      entity="EStockExchange"></o-chart>
+    <div class="body-text-container">
+      <h2>Basic Usage</h2>
+      <p class="body-text">
+        Chart data are provided through an Ontimize service.
+      </p>
     </div>
   </example-comp>
 
   <example-comp [comp-name]="getCustomServiceId()" [files]="getCustomServiceFiles()">
-    <div layout="row" layout-padding layout-align="center center">
-      <o-chart #ohlc2 type="ohlcBarChart" chart-height="600" x-data-type="time"
-        [chart-parameters]="chartParameters2"></o-chart>
-    </div>
-    <div class="body-text-container" layout-padding>
+    <o-chart #ohlc2 type="ohlcBarChart" chart-height="600" x-data-type="time" [chart-parameters]="chartParameters2"></o-chart>
+    <div class="body-text-container">
       <h2>Custom Data</h2>
       <p class="body-text">
-        Chart data are provided through an independent own service. In this case de data
-        are hard coded in the typescript
+        Chart data are provided through an independent own service. In this case de data are hard coded in the
+        typescript.
       </p>
     </div>
   </example-comp>
