--- a/src/app/main/parallel-coordinates/parallel-coordinates.component.html
+++ b/src/app/main/parallel-coordinates/parallel-coordinates.component.html
@@ -1,10 +1,7 @@
-<div layout="column" layout-align="center top" layout-margin>
-
+<div fxLayout="column" fxLayoutAlign="center top">
   <example-comp [comp-name]="getBasicId()" [files]="getBasicFiles()">
-    <div layout="row" layout-padding layout-align="center center">
-      <o-chart type="parallelCoordinatesChart" flex="75" chart-height="350" entity="EDimensionData" [chart-parameters]="chartConf2"></o-chart>
-    </div>
-    <div class="body-text-container" layout-padding>
+    <o-chart type="parallelCoordinatesChart" chart-height="350" entity="EDimensionData" [chart-parameters]="chartConf2"></o-chart>
+    <div class="body-text-container">
       <h2>Basic Usage</h2>
       <p class="body-text">
         Chart data are provided through an Ontimize service.
@@ -13,14 +10,12 @@
   </example-comp>
 
   <example-comp [comp-name]="getCustomId()" [files]="getCustomFiles()">
-    <div layout="row" layout-padding layout-align="center center">
-      <o-chart #chart type="parallelCoordinatesChart" flex="75" chart-height="350" [chart-parameters]="chartConf"></o-chart>
-    </div>
-    <div class="body-text-container" layout-padding>
+    <o-chart #chart type="parallelCoordinatesChart" chart-height="350" [chart-parameters]="chartConf"></o-chart>
+    <div class="body-text-container">
       <h2>Custom Usage</h2>
       <p class="body-text">
-        Chart data are provided through an independent own service. In this case de data
-        are hard coded in the typescript
+        Chart data are provided through an independent own service. In this case de data are hard coded in the
+        typescript.
       </p>
     </div>
   </example-comp>
