--- a/src/app/main/pie/pie.component.html
+++ b/src/app/main/pie/pie.component.html
@@ -1,37 +1,26 @@
-<div layout="column" layout-align="center top" layout-margin>
+<div fxLayout="column" fxLayoutAlign="center top">
+  <example-comp [comp-name]="getBasicUsageId()" [files]="getBasicUsageFiles()">
+    <o-chart type="pie" entity="EMovementTypesTotal" x-axis="MOVEMENTTYPES" y-axis="MOVEMENT"></o-chart>
+    <div class="body-text-container">
+      <h2>Basic Usage</h2>
+      <p class="body-text">
+        Chart data are provided through an Ontimize service.
+      </p>
+    </div>
+  </example-comp>
 
-    <example-comp [comp-name]="getBasicUsageId()" [files]="getBasicUsageFiles()" layout-fill>
-        <div layout="row" layout-padding layout-align="center center">
-            <o-chart type="pie" flex="75" entity="EMovementTypesTotal" x-axis="MOVEMENTTYPES" y-axis="MOVEMENT"></o-chart>
-        </div>
-        <div class="body-text-container" layout-padding>
-            <h2>Basic Usage</h2>
-            <p class="body-text">
-                Chart data are provided through an Ontimize service.
-            </p>
-        </div>
-    </example-comp>
+  <example-comp [comp-name]="getCustomConfigurationId()" [files]="getCustomConfigurationFiles()">
+    <o-chart type="pie" entity="EMovementTypesTotal" x-axis="MOVEMENTTYPES" y-axis="MOVEMENT" [chart-parameters]="chartParameters"></o-chart>
+  </example-comp>
 
-    <example-comp [comp-name]="getCustomConfigurationId()" [files]="getCustomConfigurationFiles()" layout-fill>
-        <div layout="row" layout-padding layout-align="center center">
-            <o-chart type="pie" flex="75" entity="EMovementTypesTotal" x-axis="MOVEMENTTYPES" y-axis="MOVEMENT"
-            [chart-parameters]="chartParameters">
-            </o-chart>
-        </div>
-
-    </example-comp>
-
-    <example-comp [comp-name]="getCustomDataId()" [files]="getCustomDataFiles()" layout-fill>
-        <div layout="row" layout-padding layout-align="center center">
-            <o-chart #pieChart type="pie" [data]="data" flex="75"></o-chart>
-        </div>
-        <div class="body-text-container" layout-padding>
-            <h3>Custom service </h3>
-            <p class="body-text">
-                Chart data are provided through an independent own service. In that case the service response
-                contains the data according to the architecture expected by the chart (see 'service data' tab)
-            </p>
-        </div>
-    </example-comp>
-
+  <example-comp [comp-name]="getCustomDataId()" [files]="getCustomDataFiles()">
+    <o-chart #pieChart type="pie" [data]="data"></o-chart>
+    <div class="body-text-container">
+      <h3>Custom service </h3>
+      <p class="body-text">
+        Chart data are provided through an independent own service. In that case the service response contains the data
+        according to the architecture expected by the chart (see 'service data' tab).
+      </p>
+    </div>
+  </example-comp>
 </div>
