--- a/src/app/main/radar/radar.component.html
+++ b/src/app/main/radar/radar.component.html
@@ -1,26 +1,21 @@
-<div layout="column" layout-align="center top">
-
-    <example-comp [comp-name]="getBasicId()" [files]="getBasicFiles()">
-        <div layout="row" layout-fill layout-align="center">
-          <o-chart type="radarChart" chart-height="400" flex="75" entity="EDimensionData" [chart-parameters]="chartConf2"></o-chart>
-        </div>
-        <div class="body-text-container" layout-padding>
-          <h2>Basic Usage</h2>
-          <p class="body-text">
-            Chart data are provided through an Ontimize service.
-          </p>
-        </div>
-      </example-comp>
+<div fxLayout="column" fxLayoutAlign="center top">
+  <example-comp [comp-name]="getBasicId()" [files]="getBasicFiles()">
+    <o-chart type="radarChart" chart-height="400" entity="EDimensionData" [chart-parameters]="chartConf2"></o-chart>
+    <div class="body-text-container">
+      <h2>Basic Usage</h2>
+      <p class="body-text">
+        Chart data are provided through an Ontimize service.
+      </p>
+    </div>
+  </example-comp>
 
   <example-comp [comp-name]="getCustomId()" [files]="getCustomFiles()">
-    <div layout="row" layout-fill layout-align="center">
-      <o-chart #radar type="radarChart" chart-height="400" flex="75" [chart-parameters]="chartConf"></o-chart>
-    </div>
-    <div class="body-text-container" layout-padding>
+    <o-chart #radar type="radarChart" chart-height="400" [chart-parameters]="chartConf"></o-chart>
+    <div class="body-text-container">
       <h2>Custom Usage</h2>
       <p class="body-text">
-        Chart data are provided through an independent own service. In this case de data
-        are hard coded in the typescript
+        Chart data are provided through an independent own service. In this case de data are hard coded in the
+        typescript.
       </p>
     </div>
   </example-comp>
