--- a/src/app/shared/example/example.component.html
+++ b/src/app/shared/example/example.component.html
@@ -1,7 +1,7 @@
 <div fxLayout="column" fxLayoutAlign="center top" fxFill>
 
   <div fxLayout="column" layout-padding fxFill>
-    <section fxLayout="column" class="playground-container mat-elevation-z4" [class.show-source]="showSource">
+    <section fxLayout="column" class="playground-container mat-elevation-z4" [class.show-source]="showSource" fxFill>
       <mat-toolbar class="playground-toolbar" color="primary">
         <span> {{ compName }}</span>
         <span fxFlex></span>
