--- a/src/app/shared/example/example.component.html
+++ b/src/app/shared/example/example.component.html
@@ -1,46 +1,39 @@
-<div fxLayout="column" fxLayoutAlign="center top" fxFill>
+<section fxLayout="column" class="mat-elevation-z2" fxLayoutAlign="start stretch">
+  <mat-toolbar fxLayout="row" color="primary" class="playground-toolbar">
+    <div fxLayout="column" fxFlex>
+      <span> {{ compName | oTranslate }}</span>
+      <span class="comp-description" [innerHTML]="compDesc | oTranslate"> </span>
+    </div>
 
-  <div fxLayout="column" layout-padding fxFill>
-    <section fxLayout="column" class="playground-container mat-elevation-z4" [class.show-source]="showSource">
-      <mat-toolbar class="playground-toolbar" color="primary">
-        <span> {{ compName }}</span>
-        <span fxFlex></span>
+    <button *ngIf="!collapsed && orderedFiles && orderedFiles.length" mat-icon-button aria-label="View Source" (click)="toggleShowSource()">
+      <mat-icon class="mat-24">code</mat-icon>
+    </button>
 
-        <button *ngIf="!collapsed && orderedFiles && orderedFiles.length" mat-icon-button aria-label="View Source" (click)="toggleShowSource()">
-          <mat-icon class="mat-24">code</mat-icon>
-        </button>
+    <button *ngIf="collapsible" mat-icon-button aria-label="Collapse" (click)="collapsed = !collapsed">
+      <mat-icon *ngIf="!collapsed" class="mat-24">keyboard_arrow_up</mat-icon>
+      <mat-icon *ngIf="collapsed" class="mat-24">keyboard_arrow_down</mat-icon>
+    </button>
 
-        <button *ngIf="collapsible" mat-icon-button aria-label="Collapse" (click)="collapsed = !collapsed">
-          <mat-icon *ngIf="!collapsed" class="mat-24">keyboard_arrow_up</mat-icon>
-          <mat-icon *ngIf="collapsed" class="mat-24">keyboard_arrow_down</mat-icon>
-        </button>
+  </mat-toolbar>
 
-      </mat-toolbar>
-
-      <!-- Source views -->
-      <mat-tab-group *ngIf="showSource">
-        <!--<mat-tab *ngFor="let file of orderedFiles" label="{{ file?.type | oTranslate }}">
-              <div class="playground-source-container">
-                <highlight-comp [template-content]="file.data" [template-type]="file.type" ></highlight-comp>
-              </div>
-          </mat-tab>-->
-        <mat-tab label="{{ 'html' | uppercase }}" *ngIf="hasTplData('html')">
-          <highlight-comp [template-content]="html ? html : getTplData('html')" [template-type]="html"></highlight-comp>
-        </mat-tab>
-        <mat-tab label="{{ 'scss' | uppercase }}" *ngIf="hasTplData('scss')">
-          <highlight-comp [template-content]="getTplData('scss')" [template-type]="scss"></highlight-comp>
-        </mat-tab>
-        <mat-tab label="{{ 'typescript' | uppercase }}" *ngIf="hasTplData('typescript')">
-          <highlight-comp [template-content]="getTplData('typescript')" [template-type]="typescript"></highlight-comp>
-        </mat-tab>
-      </mat-tab-group>
-
-      <!-- Live Demos -->
-      <div fxFlex="grow" [class.collapsed]="collapsed" [class.collapsible]="collapsible">
-        <ng-content></ng-content>
-      </div>
-
-    </section>
-
+  <!-- Source views -->
+  <div fxLayout *ngIf="showSource" [style.height]="tabHeight">
+    <mat-tab-group fxFlex class="playground-tabs">
+      <mat-tab label="{{ 'html' | uppercase }}" *ngIf="hasTplData('html')">
+        <highlight-comp [template-content]="html ? html : getTplData('html')" [template-type]="html"></highlight-comp>
+      </mat-tab>
+      <mat-tab label="{{ 'scss' | uppercase }}" *ngIf="hasTplData('scss')">
+        <highlight-comp [template-content]="getTplData('scss')" [template-type]="scss"></highlight-comp>
+      </mat-tab>
+      <mat-tab label="{{ 'typescript' | uppercase }}" *ngIf="hasTplData('typescript')">
+        <highlight-comp [template-content]="getTplData('typescript')" [template-type]="typescript"></highlight-comp>
+      </mat-tab>
+    </mat-tab-group>
   </div>
-</div>
+
+  <!-- Live Demos -->
+  <div fxFlex="grow" [class.collapsed]="collapsed" [class.collapsible]="collapsible" class="playground-examples">
+    <ng-content></ng-content>
+  </div>
+
+</section>
