--- a/src/app/shared/example/example.component.scss
+++ b/src/app/shared/example/example.component.scss
@@ -1,10 +1,20 @@
 .example-comp {
-  .playground-source-container {
-      display: block;
-      height: 300px;
-      overflow: hidden;
-      overflow-y: auto;
+  & > section {
+   // height:calc(100% - 24px);
+    margin: 12px;
+  }
+
+
+  .playground-toolbar.mat-toolbar-single-row{
+    height: 100%;
+    min-height: 64px;
+    white-space: initial;
+
+    .comp-description {
+      font-size: .8em;
+      line-height: 1em;
     }
+  }
 
   .collapsible {
     overflow: hidden;
@@ -12,13 +22,18 @@
     -moz-transition: max-height 1.8s;
     transition: max-height 1.8s;
     max-height: 2500px;
+
     &.collapsed {
-      max-height: 0px;
+      max-height: 0;
     }
   }
 
   .o-form form.inner-form {
     position: relative;
-    padding-top: 8px;
   }
+
+  .mat-tab-body-wrapper {
+    height: 100%;
+  }
+
 }
