Updated example component

--- a/src/app/main/bar-chart/bullet/bullet.component.html
+++ b/src/app/main/bar-chart/bullet/bullet.component.html
@@ -3,7 +3,7 @@
     <o-chart type="bulletChart" chart-height="200" entity="EBullet" [chart-parameters]='chartParameters2'></o-chart>
   </example-comp>
 
-  <example-comp comp-name="BAR_CHAR.BULLET_CUSTOM" comp-desc="BAR_CHAR.BULLET_CUSTOM.DESC" [files]="getCustomFiles()">
+  <example-comp comp-name="BAR_CHAR.BULLET_CUSTOM" comp-desc="BAR_CHAR.BULLET_CUSTOM.DESC"  comp-note="BAR_CHAR.BULLET_CUSTOM.NOTE" [files]="getCustomFiles()">
     <o-chart #bulletChart type="bulletChart" chart-height="200" [chart-parameters]="chartParameters"></o-chart>
   </example-comp>
 </div>
