--- a/src/app/main/line-chart/line/line.component.html
+++ b/src/app/main/line-chart/line/line.component.html
@@ -2,8 +2,7 @@
 
     <example-comp comp-name="LINE_CHART.LINE_BASIC" comp-desc="LINE_CHART.LINE_BASIC.DESC" [files]="getBasicUsageFiles()"
         layout-fill>
-        <o-chart type="line" x-label="Time" y-label="Amount (€)" entity="EMovements" x-axis="DATE_" y-axis="MOVEMENT"
-            x-data-type="time"></o-chart>
+        <o-chart type="line" x-label="Time" y-label="Amount (€)" entity="EMovements" x-axis="DATE_" y-axis="MOVEMENT" x-data-type="time"></o-chart>
     </example-comp>
 
     <example-comp comp-name="LINE_CHART.LINE_CUSTOM" comp-desc="LINE_CHART.LINE_CUSTOM.DESC" [files]="getBasicUsageConfFiles()"
