--- a/src/app/shared/example/example.component.scss
+++ b/src/app/shared/example/example.component.scss
@@ -1,11 +1,9 @@
 .example-comp {
   & > section {
-   // height:calc(100% - 24px);
     margin: 12px;
   }
 
-
-  .playground-toolbar.mat-toolbar-single-row{
+  .playground-toolbar.mat-toolbar-single-row {
     height: 100%;
     min-height: 64px;
     white-space: initial;
@@ -13,6 +11,24 @@
     .comp-description {
       font-size: .8em;
       line-height: 1em;
+      padding-bottom: 12px;
+    }
+
+  }
+
+  .comp-note {
+    font-size: .9em;
+    padding: 12px 24px;
+
+    p {
+      mat-icon {
+        padding-right: 12px;
+        border-right: 3px solid;
+      }
+
+      span {
+        padding: 0 12px;
+      }
     }
   }
 
