Updated new styles in all charts

--- a/src/app/main/bar-chart/discrete-bar/discrete-bar.component.scss
+++ b/src/app/main/bar-chart/discrete-bar/discrete-bar.component.scss
@@ -4,6 +4,8 @@
   width: 60px;
 }
 
-.align-right input{
-  text-align: right !important;
+.align-right {
+  input {
+    text-align: right !important;
+  }
 }
