--- a/src/app/main/bar-chart/multi-bar/multi-bar.component.html
+++ b/src/app/main/bar-chart/multi-bar/multi-bar.component.html
@@ -7,6 +7,6 @@
 
     <example-comp comp-name="BAR_CHAR.MULTIBAR_CUSTOM_SERIES" comp-desc="BAR_CHAR.MULTIBAR_CUSTOM_SERIES.DESC"
         comp-note="BAR_CHAR.MULTIBAR_CUSTOM_SERIES.NOTE" [files]="getCustomDataFiles()" layout-fill>
-        <o-chart #multiBar type="multiBar" x-label="Time" y-label="Amount (€)" [data]="data" x-data-type="time" flex="75"></o-chart>
+        <o-chart #multiBar type="multiBar" x-label="Time" y-label="Amount (€)" [data]="data" x-data-type="time"></o-chart>
     </example-comp>
 </div>
