--- a/src/app/main/bubble-chart/scatter/scatter.component.html
+++ b/src/app/main/bubble-chart/scatter/scatter.component.html
@@ -1,10 +1,10 @@
 <div fxLayout="column" fxLayoutAlign="center top" layout-margin>
   <example-comp comp-name="BUBBLE_CHART.SCATTER_BASIC" comp-desc="BUBBLE_CHART.SCATTER_BASIC.DESC" [files]="getBasicUsageFiles()">
-    <o-chart #scatter type="scatterChart" x-label="Time" y-label="Amount (€)" entity="EMovementsGrouped" x-axis="DATE_"
-      y-axis="MOVEMENT;AVERAGE;BALANCE" x-data-type="time" chart-height="600"></o-chart>
+    <o-chart type="scatterChart" x-label="Time" y-label="Amount (€)" entity="EMovementsGrouped" x-axis="DATE_" y-axis="MOVEMENT;AVERAGE;BALANCE"
+      x-data-type="time" chart-height="600"></o-chart>
   </example-comp>
   <example-comp comp-name="BUBBLE_CHART.SCATTER_CUSTOM" comp-desc="BUBBLE_CHART.SCATTER_CUSTOM.DESC" [files]="getCustomConfigurationFiles()">
-    <o-chart #scatter2 type="scatterChart" x-label="Time" y-label="Amount (€)" entity="EMovementsGrouped" x-axis="DATE_"
-      y-axis="MOVEMENT;AVERAGE;BALANCE" x-data-type="time" [chart-parameters]="chartParameters" chart-height="600"></o-chart>
+    <o-chart type="scatterChart" x-label="Time" y-label="Amount (€)" entity="EMovementsGrouped" x-axis="DATE_" y-axis="MOVEMENT;AVERAGE;BALANCE"
+      x-data-type="time" [chart-parameters]="chartParameters" chart-height="600"></o-chart>
   </example-comp>
 </div>
