--- a/src/app/shared/example/example.component.html
+++ b/src/app/shared/example/example.component.html
@@ -1,36 +1,35 @@
 <section fxLayout="column" class="mat-elevation-z2" fxLayoutAlign="start stretch">
-  <mat-toolbar fxLayout="row" color="primary" class="playground-toolbar">
-    <div fxLayout="column" fxFlex>
-      <span> {{ compName | oTranslate }}</span>
-      <span class="comp-description" [innerHTML]="compDesc | oTranslate"> </span>
+
+    <mat-toolbar fxLayout="row" color="primary" class="playground-toolbar">
+      <div fxLayout="column" fxFlex>
+        <span>{{ compName | oTranslate }}</span>
+        <span class="comp-description">{{ compDesc | oTranslate }}</span>
+      </div>
+      <button *ngIf="!collapsed" mat-icon-button aria-label="View Source" (click)="toggleShowSource()">
+        <mat-icon class="mat-24">code</mat-icon>
+      </button>
+      <button *ngIf="collapsible" mat-icon-button aria-label="Collapse" (click)="collapsed = !collapsed">
+        <mat-icon *ngIf="!collapsed" class="mat-24">keyboard_arrow_up</mat-icon>
+        <mat-icon *ngIf="collapsed" class="mat-24">keyboard_arrow_down</mat-icon>
+      </button>
+    </mat-toolbar>
+  
+    <div fxLayout *ngIf="showSource" [style.height]="tabHeight">
+      <mat-tab-group fxFlex class="playground-tabs">
+        <mat-tab label="{{ 'html' | uppercase }}" *ngIf="html">
+          <highlight-comp [template-content]="html" template-type="html"></highlight-comp>
+        </mat-tab>
+        <mat-tab label="{{ 'scss' | uppercase }}" *ngIf="files.scss && files.scss.data">
+          <highlight-comp [template-content]="files.scss.data" template-type="scss"></highlight-comp>
+        </mat-tab>
+        <mat-tab label="{{ 'typescript' | uppercase }}" *ngIf="files.typescript && files.typescript.data">
+          <highlight-comp [template-content]="files.typescript.data" template-type="typescript"></highlight-comp>
+        </mat-tab>
+        <mat-tab *ngFor="let file of aditionalTabs" [label]="file.label">
+          <highlight-comp [template-content]="file.data" [template-type]="file.type"></highlight-comp>
+        </mat-tab>
+      </mat-tab-group>
     </div>
-
-    <button *ngIf="!collapsed && orderedFiles && orderedFiles.length" mat-icon-button aria-label="View Source" (click)="toggleShowSource()">
-      <mat-icon class="mat-24">code</mat-icon>
-    </button>
-
-    <button *ngIf="collapsible" mat-icon-button aria-label="Collapse" (click)="collapsed = !collapsed">
-      <mat-icon *ngIf="!collapsed" class="mat-24">keyboard_arrow_up</mat-icon>
-      <mat-icon *ngIf="collapsed" class="mat-24">keyboard_arrow_down</mat-icon>
-    </button>
-
-  </mat-toolbar>
-
-  <!-- Source views -->
-  <div fxLayout *ngIf="showSource" [style.height]="tabHeight">
-    <mat-tab-group fxFlex class="playground-tabs">
-      <mat-tab label="{{ 'html' | uppercase }}" *ngIf="hasTplData('html')">
-        <highlight-comp [template-content]="html ? html : getTplData('html')" [template-type]="html"></highlight-comp>
-      </mat-tab>
-      <mat-tab label="{{ 'scss' | uppercase }}" *ngIf="hasTplData('scss')">
-        <highlight-comp [template-content]="getTplData('scss')" [template-type]="scss"></highlight-comp>
-      </mat-tab>
-      <mat-tab label="{{ 'typescript' | uppercase }}" *ngIf="hasTplData('typescript')">
-        <highlight-comp [template-content]="getTplData('typescript')" [template-type]="typescript"></highlight-comp>
-      </mat-tab>
-    </mat-tab-group>
-  </div>
-
   <!-- Live Demos -->
   <div fxFlex="grow" [class.collapsed]="collapsed" [class.collapsible]="collapsible" class="playground-examples">
     <ng-content></ng-content>
