--- a/src/app/shared/example/example.component.scss
+++ b/src/app/shared/example/example.component.scss
@@ -3,17 +3,13 @@
     margin: 12px;
   }
 
-  .playground-toolbar.mat-toolbar-single-row {
-    height: 100%;
-    min-height: 64px;
-    white-space: initial;
-
+  .playground-toolbar {
     .comp-description {
       font-size: .8em;
       line-height: 1em;
-      padding-bottom: 12px;
     }
 
+    
   }
 
   .comp-note {
